httpd-ingress-cx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/group.name: myalb-group
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120 #ALB warm up period 
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=120
    alb.ingress.kubernetes.io/target-type: ip
  name: alb-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-svc
            port:
              number: 8080

      #- path: /nginx
      #  pathType: Prefix
      #  backend:
      #    service:
      #      name: nginx-svc
      #      port:
      #        number: 8081
